[package]
name = "rust_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.30"
clap = { version = "4.4.0", features = ["derive"] }
libc = "0.2.84"
log = "0.4.20"
mio = { version = "0.8.8", features = ["os-ext", "os-poll"] }
nix = "0.19.1"
once_cell = "1.18.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
